# mkdocs-mcp

./: .gitignore  LICENSE  README.md  dev_server.py  pyproject.toml
.claude/agent-memory/pytest-expert/: MEMORY.md
.claude/agent-memory/security-auditor/: MEMORY.md
.github/workflows/: release.yml
docs/security/: audit-indexer-2026-02-19.md
src/mkdocs_mcp/: __init__.py  config.py  indexer.py  models.py  repository.py  searcher.py  server.py  utils.py
tests/: conftest.py  test_config.py  test_indexer.py  test_integration.py  test_searcher.py  test_security.py  test_server.py  test_utils.py
