[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-mcp"
version = "0.1.0"
description = "A lightweight MCP server for MkDocs documentation sites"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "markdown>=3.4",
]

[project.optional-dependencies]
vector = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mkdocs-mcp = "mkdocs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_mcp"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
